--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         document.getElementById('fetchButton').addEventListener('click', fetchData);
 
         function fetchData() {
-            fetch('http://167.99.253.247:8080/')
+            fetch('https://167.99.253.247:8080/')
                 .then(response => {
                     if (!response.ok) {
                         throw new Error('Network response was not ok');
